centered the count

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	</head>
 
 	<body>
-		<div id="counter">
-			<p class="counter">This page has been visited <a id="count"></a> times.</p>
-
+		<div id="countertext">
+			<p>This page has been visited <a id="count"></a> times.</p>
 		</div>
 		<div id="container">
 			<div id="sidebar">
