--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 	</head>
 
 	<body>
-		<div id="countertext">
-			<p>This page has been visited <a id="count"></a> times.</p>
+		<div class="container">
+			<div id="countertext">
+				<p>This page has been visited <a id="count"></a> times.</p>
+			</div>
 		</div>
+
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
