touched the website a bit

--- a/index.html
+++ b/index.html
@@ -64,11 +64,23 @@
 			</div>
 			<div id="info-pages">
 				<div class="page">
+					<p>&nbsp;&nbsp;&nbsp;Skills</p>
+					<ul>
+                        <p class="tag">Languages:<br> <span>C, C#, C++, Java, JavaScript, Python, RISC-V, x86</span> </p>
+						<p class="tag">Tools: <br><span>Apache Kafka, AWS CloudFormation, Docker, GitHub Actions, GNU Debugger, JUnit, React.js, Selenium, Terraform,
+							Vagrant</span> </p>
+						<p class="tag">Cloud Services: <br><span>AWS CloudFront, AWS Lambda, AWS S3, Azure AI Vision, Azure Event Grid, Azure Functions, Azure KeyVault</span> </p>
+						<p class="tag">Databases: <br><span>AWS DynamoDB, Azure CosmosDB, MongoDB</span> </p>
+
+					</ul>
+
+
 					<p>&nbsp;&nbsp;&nbsp;Work experience</p>
 					<ul>
-                        <p class="tag">Security Guard<br><span>Bear Basics | <span>2023-now</span></span></p>
+                        <p class="tag">General Sale Associate<br><span>Bear Basics | <span>2023-now</span></span></p>
 						<ul>
-                            <li>Provide security at the front door and the floor of the store, and customer service to incoming customers.</li>
+							
+                            <li>Acts as security, cashier, and sale person on demand.</li>
                             <li>Yep, this is how I start out of college, and if you are struggling to find a job like me in 2023, just know that it is fine.</li>
                             <br>
 						</ul>
@@ -91,16 +103,24 @@
 					<p>&nbsp;&nbsp;&nbsp;Projects</p>
 					<ol>
 						<li> 
-							<p class="tag">This Website - <span>Built a personal portfolio website and utilized AWS cloud services to distribute it as a serverless website.</span></p>
+							<p class="tag">This Website - <span>Designed a personal portfolio website as a serverless web application and deployed it using AWS services.</span></p>
 							<ul>
-								<li>Distributed the website with AWS S3, AWS CloudFront and AWS Route53 with AWS Serverless Lambda fetching the number of visitors from AWS DynamoDB.</li>
-								<li>Set up AWS SAM template for the Infrastructure as Code, and GitHub Actions for CI/CD.</li>
+								<li>Hosted and distributed the website with AWS S3, AWS CloudFront, and AWS Route53.</li>
+								<li>Modify and display the total number of visitors from AWS DynamoDB using AWS Serverless Lambda.</li>
+								<li>Launched GitHub Actions for CI/CD pipeline, and AWS CloudFormation to deploy the AWS infrastructure.</li>
 								<br>
 							</ul>
 						</li>
-
+						<li>
+							<p class="tag">Event-Driven Serverless Tollbooth - <span>Developed the Terraform-provisioned Azure infrastructure that scans vehicle plate images and reports data analysis.</span></p>
+							<ul>
+								<li>Designed the event-driven architecture using Azure Functions and Azure Event Grid to scan vehicle plate images using
+									Azure AI Vision, send scanned or unscannable data separately to Azure CosmosDB, and provide metrics using Azure
+									Application Insights.</li>
+								<br>
+							</ul>
 						<li> 
-							<p class="tag">Database Management System - <span>Enhanced the internals of a relational database management system. </span></p>
+							<p class="tag">Relational Database Engine - <span>Upgraded the internals of a relational database management system with SQL support.</span></p>
 							<ul>
 								<li>Achieved higher throughput with two-phase locking, and lower disk read/write with a query optimizer that utilizes indexing and efficient join algorithms.</li>
 								<li>Incorporated the write-ahead log system to recover from catastrophic disk failures.</li>
