--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 		<div id="countertext">
 			<p>This page has been visited <a id="count"></a> times.</p>
 		</div>
-
 		<div id="container">
 			<div id="sidebar">
 				<div id="image">
-					<img id="profile-photo" src="me.jpg" alt="Profile-Image">
+					<img id="profile-photo" src="images/me.jpg" alt="Profile-Image">
 				</div>
-				<p id="name">Kaung Si Thu<br></p>
-				<p>C | Java | JavaScript | Python | Linux<br>
+				<p id="name">Kaung Si Thu (B.S. EECS)<br></p>
+				<p>Some Facts about me: <br>
                     <span id="description">
-                    - Recent UC Berkeley Graduate in EEECS <br>
-                    - I tutor and help students attend top schools like UC Berkeley <br>
-                    - I like new challenges and playing with tech in spare time <br>
-                    - I love coffee!
+                    - I played Taekwondo since I was 5 until my 14. <br>
+					- I am into horror/thriller/mystery genre. <br>
+					- I love coffee! <br>
                     </span>
                 </p>
 				<hr width="100%">
-				<!-- <div id="course"> -->
                     <p class="tag">Upper Division Coursework<br><span>UC Berkeley | <span>2020-2023</span></span></p>
                     <ul>
                         <li class="course"><a href="https://cs162.org">Operating Systems and Systems Programming</a></li>
@@ -38,11 +35,14 @@
                         <li class="course"><a href="https://inst.eecs.berkeley.edu/~cs188">Introduction to Arificial Intelligence</a></li>
                         <li class="course"><a href="https://people.eecs.berkeley.edu/~jrs/189/">Introduction to Machine Learning</a></li>
                     </ul>                    
-				<!-- </div> -->
 				<hr width="100%">
 				<div id="sidepanel-section-title">Certifications<br>
-					<a href="https://www.credly.com/org/coursera/badge/google-it-support-certificate" class="link" target="_blank">
-						<img id="cert-thumbnail" src="google_it_support.png" alt="AWS Certified Solutions Architect Associate">
+					<a href="https://coursera.org/share/3ce20855b07bb859a3aaa8209fbbeacb" class="link" target="_blank">
+						<img id="cert-thumbnail" src="images/google_it_support.png" alt="Google IT Support">
+					</a>
+					<a href="https://learn.microsoft.com/api/credentials/share/en-us/KaungSiThu-3438/25973E8A98E4D27A?sharingId=CF3EB5DE3E4251B7" class="link" target="_blank">
+						<img id="cert-thumbnail" src="images/zero-state-applied-skills.svg" alt="Secure storage for Azure Files and Azure Blob Storage
+						">
 					</a>
 				</div>
 				<hr width="100%">
@@ -55,11 +55,11 @@
 					</a>
 				</div>
                         <a href="https://www.linkedin.com/in/kaungsithu-kst" class="link" target="_blank">
-                            <img id="social-thumbnail" src="linked_in.png" alt="LinkedIn">
+                            <img id="social-thumbnail" src="images/linked_in.png" alt="LinkedIn">
                         </a>
                         &nbsp;
                         <a href="https://github.com/kstiel" class="link" target="_blank">
-                            <img id="social-thumbnail" src="github.png" alt="GitHub">
+                            <img id="social-thumbnail" src="images/github.png" alt="GitHub">
                         </a>
 			</div>
 			<div id="info-pages">
@@ -81,7 +81,7 @@
 						<ul>
 							
                             <li>Acts as security, cashier, and sale person on demand.</li>
-                            <li>Yep, this is how I start out of college, and if you are struggling to find a job like me in 2023, just know that it is fine.</li>
+                            <li>Yep, this is how I start out of college, and 2023 was a tough year to land an SWE job.</li>
                             <br>
 						</ul>
 						<p class="tag">Freelance<br><span>Computer Science and Electrical Engineering Tutor | <span>2019-now</span></span></p>
