--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<ul>
 						<li class="course"><a href="https://coursera.org/share/3ce20855b07bb859a3aaa8209fbbeacb">Google IT Support</a></li>
 						<li class="course"><a href="https://learn.microsoft.com/api/credentials/share/en-us/KaungSiThu-3438/25973E8A98E4D27A?sharingId=CF3EB5DE3E4251B7">Secure storage for Azure Files and Azure Blob Storage</a></li>
-						<li class="course"><a href="Configure secure access to your workloads using Azure networking">Configure secure access to your workloads using Azure networking
+						<li class="course"><a href="https://learn.microsoft.com/api/credentials/share/en-us/KaungSiThu-3438/4B0FE2F2B3650352?sharingId=CF3EB5DE3E4251B7">Configure secure access to your workloads using Azure networking
 	
 					</ul>
 				</div>
